# Break-Time

./: .gitignore  Cargo.toml  LICENSE  README.md  build-flatpak.sh  bundle-flatpak.sh  io.github.HuntedRaven7.BreakTime.yml
data/: io.github.HuntedRaven7.BreakTime.desktop  io.github.HuntedRaven7.BreakTime.metainfo.xml
src/: main.rs
src/calendar/: mod.rs
src/notes/: mod.rs
src/rss/: mod.rs  storage.rs
src/themes/: mod.rs
src/timer/: mod.rs
src/todo/: mod.rs
src/ui/: window.rs
