[package]
name = "break-time"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
# GTK4 and Libadwaita for the GUI
gtk4 = { version = "0.11", features = ["v4_16"] }
libadwaita = { version = "0.9", features = ["v1_7"] }

# Async runtime for network and timers
tokio = { version = "1", features = ["full"] }

# RSS parsing and fetching
feed-rs = "2.3"
reqwest = { version = "0.13", features = ["json"] }

# Markdown rendering/parsing
pulldown-cmark = "0.13"

# Date and time handling
chrono = "0.4"

# Source code view for the markdown editor (with syntax highlighting)
sourceview5 = "0.11"

# To allow cloning for async blocks
glib = "0.22"

# Native desktop notifications for Linux
notify-rust = "4.15"

# Serialization for storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Find standard OS directories
directories = "6.0"
